--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="#Slideshow">Slideshow</a>
             <a href="#About">About</a>
             <a href="#GitHub">GitHub</a>
+            <a href="#Resume">Resume</a>
             <a href="#Contact">Contact</a>
         </div>
 
@@ -127,6 +128,21 @@
                 </div>
                 <div class="Column_5">
                     <img src="Images/Github_Logo.jpg" alt="Github">
+                </div>
+            </div>
+
+        <!--Resume section-->
+            <div id="Resume" class="row">
+                <div class= "Column_6">
+                    <h1>My Resume</h1>
+                    <p>
+                        You can view my resume here:
+                        <p class="center"><a href="https://docs.google.com/document/d/10BuZZMUTKzMhMR1H6ifLcl9DwcTht6Oo/edit?usp=sharing&ouid=110150325947455086939&rtpof=true&sd=true" target="_blank">My Resume</a></p>
+                    </p>
+	    <br>
+                    <p> 
+                       You can view my Linkedin here:
+                        <p class="center"><a href="https://www.linkedin.com/in/phillip-beasley-jr-838216165/" target="_blank">My Linkedin</a></p>
                 </div>
             </div>
 
