--- a/index.html
+++ b/index.html
@@ -1,181 +1,120 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="CSS/website_style.css">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Phillip Beasley</title>
-</head>
+    <link rel="stylesheet" href="CSS/website_style.css">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+  </head>
+  <body>
 
-    <!--Body-->
-    <body class="Background">
-        
-        <!--Navbar-->
-        <div class="Navbar">
-            <a class="active" href="#Home">Home</a>
-            <a href="#Slideshow">Slideshow</a>
-            <a href="#About">About</a>
-            <a href="#GitHub">GitHub</a>
-            <a href="#Resume">Resume</a>
-            <a href="#Contact">Contact</a>
+    <div class="navbar">
+      <ul>
+        <a class="split" href="#">Phillip Beasley</a>
+        <li><a class="active" href="#home"><i class="fa-solid fa-house"></i> Home</a></li>
+        <li><a href="#about"><i class="fa fa-fw fa-user"></i> About</a></li>
+        <li><a href="#projects"><i class="fa-solid fa-folder"></i> Projects</a></li>
+        <li><a href="#contact"><i class="fa fa-fw fa-envelope"></i> Contact</a></li>
+      </ul>
+    </div>
+
+    <div class="header" id="home">
+      <h1>Phillip Beasley</h1>
+      <h2>Developer | Designer</h2>
+      <div class="skills">
+        <i class="fa-brands fa-html5"></i>
+        <i class="fa-brands fa-css"></i>
+        <i class="fa-brands fa-js"></i>
+        <i class="fa-brands fa-bootstrap"></i>
+        <i class="fa-brands fa-python"></i>
+        <i class="fa-solid fa-database"></i>
+        <i class="fa-brands fa-square-github"></i>
+      </div>
+    </div>
+
+    <div class="about" id="about">
+      <h2>About me...</h2>
+
+      <p>My name is Phillip Beasley, I am Web Designer/Developer whose mission is to build 
+        diverse user friendly interfaces that inspire and engages the user.</p>
+
+      <p>I've had a love for art/designing since I was seven years old. I am driven and dedicated
+        in this journey of mine as a Developer and would love to work with you on your next project.
+      </p>
+    </div>
+
+    <div class="exp">
+      <h2>Work Experience</h2>
+
+      <div class="row">
+        <div class="column">
+          <img src="Images/Resume_PB.jpg" alt="Resume" style="width:100%">
+            <a href="https://docs.google.com/document/d/10BuZZMUTKzMhMR1H6ifLcl9DwcTht6Oo/edit?usp=sharing&ouid=110150325947455086939&rtpof=true&sd=true">Resume</a>
         </div>
-
-        <!--Background video-->
-        <div id="Home">
-            <video autoplay muted loop id="Coding_Video">
-                <source src="Portfolio_Website_Video.mp4" type="video/mp4">
-            </video>
+        <div class="column">
+          <img src="Images/CoverLetter_PB.jpg" alt="Cover" style="width:100%">
+            <a href="https://docs.google.com/document/d/1a3ZrLkfFurLDd9NYwupzID4wEHokNBSPrb-vQBvQEUk/edit?usp=sharing">Cover Letter</a>
         </div>
+      </div>
+    </div>
 
-        <!--Video text-->
-        <div class="Video_Text">
-            <h1 class="white-text">Who am I?</h1>
-              <strong>
-                <p class="center">
-		            My name is Phillip Beasley. Welcome to my portfolio website!
-                <br>
-	            <br>
-		            This is my story, my background, experiences, and my goals.
-                </p>
-              </strong>
-        </div>
-	
-        <!--Slideshow-->
-            <div id="Slideshow">
-                <div id="Slideshow_Background">
-                    <div id="Slideshow_Container">
-                        <!--Slide 1-->
-                        <div class="mySlides fade">
-                            <img class="Slideshow_Images" src="Images/Slideshow_Image_1.jpg" alt="Photo of me">
-                            <div class="text">I am availiable and ready to assist with your project!</div>
-                        </div>
-                        <!--Slide 2-->
-                        <div class="mySlides fade">
-                            <img class="Slideshow_Images" src="Images/Slideshow_Image_2.jpg" alt="HTML, CSS, and JS">
-                            <div class="text">I am a Front-End Web Developer,<br> trained in:<br>HTML, CSS, and JavaScript,</div>
-                        </div>
-                        <!--Slide 3-->                   
-                        <div class="mySlides fade">
-                            <img class="Slideshow_Images" src="Images/Slideshow_Image_3.jpg" alt="Python">
-                            <div class="text">the programming language Python,</div>
-                        </div>
-                        <!--Slide 4-->
-                        <div class="mySlides fade">
-                            <img class="Slideshow_Images" src="Images/Slideshow_Image_4.jpg" alt="Progamming">
-                            <div class="text">C#, .Net Framework, ASP.NET, MVC,</div>
-                        </div>
-                        <!--Slide 5-->                
-                        <div class="mySlides fade">
-                            <img class="Slideshow_Images" src="Images/Slideshow_Image_5.jpg" alt="Progamming Logos">
-                            <div class="text">SQL and databases.</div>
-                        </div>
-                        <!--Slide 6-->                
-                        <div class="mySlides fade">
-                            <img class="Slideshow_Images" src="Images/Slideshow_Image_6.jpg" alt="Contact">
-                            <div class="text"><a class="white-text contact" onclick="openForm()">Contact Me!</a></div>
-                        </div>
+    <div class="project" id="projects">
+      <h2>Projects</h2>
 
-                        <!-- Next and previous buttons -->
-                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      <p>Below is a list of my projects I have completed. You can view my coding projects on my Github: <a href="https://github.com/pbeasley96"> Link</a> </p>
 
-                    </div>
-                    <!-- Slideshow Dots-->
-                    <div style="text-align:center">
-                        <span class="dot" onclick="currentSlide(1)"></span>
-                        <span class="dot" onclick="currentSlide(2)"></span>
-                        <span class="dot" onclick="currentSlide(3)"></span>
-                        <span class="dot" onclick="currentSlide(4)"></span>
-                        <span class="dot" onclick="currentSlide(5)"></span>
-                        <span class="dot" onclick="currentSlide(6)"></span>
-                    </div>
-                </div>
-            </div>
+      <div class="column2">
+        <img src="Images/PB_Proj1.jpg" alt="Proj1" style="width:100%">
+        <p>The World of Dragon Ball</p>
+      </div>
+      <div class="column2">
+        <img src="Images/PB_Proj2.jpg" alt="Proj2" style="width:100%">
+        <p>The Space Station</p>
+      </div>
+      <div class="column2">
+        <img src="Images/PB_Proj3.jpg" alt="Proj3" style="width:100%">
+        <p>Academy Cinemas</p>
+      </div>
+      <div class="column2">
+        <img src="Images/PB_Proj4.jpg" alt="Proj4" style="width:100%">
+        <p>Muscle Car Gallery</p>
+      </div>
+    </div>
 
-        <!--About section-->
-            <div class="Row" id="About">
-                <div class="container">
-                    <!--Left column-->
-                    <div class="Column_1">
-                        <img src="Images/Portfolio_Website_Image1.jpg" alt="Art/Design">
-                    </div>
+    <div class="contact" id="contact">
+      <h2>Contact</h2>
 
-                    <!--Middle column-->
-                    <div class="Column_2">
-                        <h1>A little about me...</h1>
-                        <p>I was born in Clarksville, TN.</p>
-                        <p>I had a love for art/designing ever since I was seven years old.</p>
-                        <p>I am driven and dedicated to my goal in looking for a new career oppurtunities to be a Front End Web Developer.</p>
-                        <p>I am a graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>’s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, C# and more.</p> 
-                        <p>I am a Front End Developer and would love to work with you on your project. <a href="#Contact">Contact</a> me below!</p>
-                    </div>
+      <div class="text-container">
+        <p><i class="fa-solid fa-envelope"></i> Email : pebeasley1996@gmail.com</p>
+        <p><i class="fa-solid fa-phone"></i> Phone Number : 931-538-8140</p>
+        <p><i class="fa-brands fa-linkedin"></i> Linkedin : <a href="https://www.linkedin.com/in/pebeasley"> My Linkedin</a></p>
+      </div>
 
-                    <!--Right column-->
-                    <div class="Column_3">
-                        <img src="Images/Portfolio_Website_Image2.jpg" alt="Front End Development">
-                    </div>
-                </div>
-            </div>
-            <br>
-        <!--GitHub section-->
-            <div class="row" id="GitHub">
-                <div class="Column_4">
-                    <h1>GitHub</h1>
-                    <p>
-                        You can view my coding projects on my GitHub profile here:
-                        <p class="center"><a href="https://github.com/pbeasley96" target="_blank">My Github</a></p>
-                    </p>
-                </div>
-                <div class="Column_5">
-                    <img src="Images/Github_Logo.jpg" alt="Github">
-                </div>
-            </div>
+      <div class="form-container">
+        <form action="https://formspree.io/f/xjvnwrbz" method="POST">
+          <label for="fname">First Name</label>
+          <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-        <!--Resume section-->
-            <div id="Resume" class="row">
-                <div class= "Column_6">
-                    <h1>My Resume</h1>
-                    <p>
-                        You can view my resume here:
-                        <p class="center"><a href="https://docs.google.com/document/d/10BuZZMUTKzMhMR1H6ifLcl9DwcTht6Oo/edit?usp=sharing&ouid=110150325947455086939&rtpof=true&sd=true" target="_blank">My Resume</a></p>
-                    </p>
-	    <br>
-                    <p> 
-                       You can view my Linkedin here:
-                        <p class="center"><a href="https://www.linkedin.com/in/phillip-beasley-jr-838216165/" target="_blank">My Linkedin</a></p>
-                </div>
-            </div>
+          <label for="lname">Last Name</label>
+          <input type="text" id="lname" name="lastname" placeholder="Your last name..">
 
-        <!--Contact section-->
-            <div id="Contact">
-                <button onclick="openForm()" class="Pop_Up_Button">CONTACT</button>
-                <div class="form-popup" id="myForm">
-                    <form action="https://formspree.io/f/xjvnwrbz" method="POST" class="form-container"> 
-                    <h1>Contact</h1>
-                        <label for="name">Name</label>
-                            <input type="text" placeholder="Please enter your name here" name="name" required>
-                        <label for="phone">Phone</label>
-                            <input type="text" placeholder="Please enter your phone number here" name="phone">
-                        <label for="email">Email</label>
-                            <input type="text" placeholder="Please enter your email here" name="email" required>
-                        <label for="message">Message</label>
-                            <input type="text" placeholder="Please write your message here" name="message">
+          <label for="subject">Message Me!</label>
+          <textarea id="subject" name="subject" placeholder="Write message.." style="height:200px"></textarea>
 
-                        <button type="submit" class="btn">SUBMIT</button>
-                        <button type="button" class="btn cancel" onclick="closeFORM()">CANCEL</button>
-                    </form>
-                </div>
-            </div>
+          <input type="submit" value="Submit">
+        </form>
+      </div>
 
-        <!--Footer section-->
-            <footer>
-                <p>
-                    <p class="center">&copy Phillip Beasley., www.PhillipBeasley.com &nbsp;|&nbsp; &copy; 2024</a></p>
-                    <br>
-                </p>
-            </footer>
+    </div>
 
-        <script src="JS/Portfolio.js"></script>
-        
-    </body>
+    <footer>
+        <p>&copy Phillip Beasley., www.PhillipBeasley.com &nbsp;|&nbsp; &copy; 2025</a></p>
+    </footer>
+
+    <script src="JS/Portfolio.js"></script>
+
+  </body>
 </html>
