pebeasley96.github.io
Added new project on to site.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@
       </div>
       <div class="column2">
         <img src="Images/PB_Proj4.jpg" alt="Proj4" style="width:100%">
-        <p>Muscle Car Gallery</p>
+        <p>American Muscle</p>
+      </div>
+      <div class="column2">
+        <img src="Images/PB_Proj5.png" alt="Proj5" style="width:100%">
+        <p>Quiz App</p>
       </div>
     </div>
 
