pebeasley96.github.io
Updated Cover Letter and Resume files

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 
       <div class="row">
         <div class="column">
-          <img src="Images/Resume_PB.jpg" alt="Resume" style="width:100%">
-            <a href="https://docs.google.com/document/d/10BuZZMUTKzMhMR1H6ifLcl9DwcTht6Oo/edit?usp=sharing&ouid=110150325947455086939&rtpof=true&sd=true">Resume</a>
+          <img src="Images/Resume_PB.png" alt="Resume" style="width:100%">
+            <a href="https://docs.google.com/document/d/1uWM0TR52mAAMdCt8F9saap9cjLcXDpCaSSvvyuCe6sw/edit?usp=sharing">Resume</a>
         </div>
         <div class="column">
-          <img src="Images/CoverLetter_PB.jpg" alt="Cover" style="width:100%">
+          <img src="Images/CoverLetter_PB.png" alt="Cover" style="width:100%">
             <a href="https://docs.google.com/document/d/1a3ZrLkfFurLDd9NYwupzID4wEHokNBSPrb-vQBvQEUk/edit?usp=sharing">Cover Letter</a>
         </div>
       </div>
